<resources>
    <string name="app_name">MyGit</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company_icon">company icon</string>
    <string name="location_icon">location icon</string>
    <string name="follower_tab_title">Followers</string>
    <string name="following_tab_title">Following</string>
    <string name="search">Find someone..</string>
    <string name="search_hint">enter keyword</string>
    <string name="back_button">Back Button</string>
    <string name="connect_to_internet">Connect to Internet</string>
    <string name="you_are_offline">You are offline. Please check your connection</string>
    <string name="connecting">Connecting to Internet</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="swipe_to_refresh">Swipe down to Refresh</string>
    <string name="refresh">Refresh</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="app_desc">Build Your Connections</string>
    <string name="favorite">Favorite</string>
    <string name="fav_empty">You have not added someone to your favorites list</string>
    <string name="no_data_match">No matching data</string>
    <string name="no_data">- no data-</string>
    <string name="search_floating_button">search floating button</string>
    <string name="share_button">share_button</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="theme_header">Theme</string>
    <string name="key_dark_mode">dark_mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="other_apps">Other Apps</string>
    <string name="about_app_full_desc">This app MyGit</string>
    <string name="profile_tab_title">Profile</string>
    <string name="kotakmovie_preview">KotakMovie Preview</string>
    <string name="spod_preview">SPOD Preview</string>
    <string name="text_scanner_preview">Text Scanner Preview</string>
    <string name="financiar_preview">Financiar Preview</string>
    <string name="sample_user_name">Ahmad Nabawi</string>
    <string name="sample_user_github_link">nabawi16</string>
    <string name="mygit">MyGit</string>

</resources>